# TexViewer

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yaml
include/: ClampedSpinbox.h  ConverterBlockCompressed.h  ConverterUncompressed.h  ImageViewer.h  MainWindow.h  Meta.h.in
src/: ClampedSpinBox.cpp  ConverterBlockCompressed.cpp  ConverterUncompressed.cpp  ImageViewer.cpp  MainWindow.cpp  main.cpp
ui/: MainWindow.ui
